--- a/view/nereid_website_product.xml
+++ b/view/nereid_website_product.xml
@@ -6,8 +6,10 @@ this repository contains the full copyright notices and license terms. -->
         <page string="Catalog Config." id="catalog">
             <label name="root_navigation_model"/>
             <field name="root_navigation_model"/>
-            <label name="root_category"/>
-            <field name="root_category"/>
+            <group id="root_category_node" colspan="2">
+                <label name="root_category"/>
+                <field name="root_category"/>
+            </group>
             <field name="categories" colspan="4"/>
         </page>
         <page string="Currencies" id="currencies">
