Added sequence field in product.category #4544
* Use this field to decide display order.

Review ID: 9853002

--- a/view/category_form_nereid.xml
+++ b/view/category_form_nereid.xml
@@ -6,6 +6,8 @@ this repository contains the full copyright notices and license terms. -->
             position="after">
         <label name="displayed_on_eshop"/>
         <field name="displayed_on_eshop"/>
+        <label name="sequence"/>
+        <field name="sequence"/>
     </xpath>
     <xpath expr="/form/notebook/page[@id=&quot;childs&quot;]"
             position="after">
