--- a/view/product_form_nereid.xml
+++ b/view/product_form_nereid.xml
@@ -27,7 +27,9 @@ this repository contains the full copyright notices and license terms. -->
                     id="ecomm_det"
                     states="{'invisible': Not(Bool(Eval('displayed_on_eshop')))}">
                 <label name="uri"/>
-                <field name="uri" colspan="3"/>
+                <field name="uri"/>
+                <label name="use_template_images"/>
+                <field name="use_template_images"/>
                 <notebook colspan="4" >
                     <page string="Related Products" col="4"
                         id="related_products" >
@@ -41,7 +43,8 @@ this repository contains the full copyright notices and license terms. -->
                             id="sepr_cross_sells"/>
                         <field name="cross_sells" colspan="4" />
                     </page>
-                    <page string="Images" id="images" >
+                    <page string="Images" id="images"
+                        states="{'invisible': Bool(Eval('use_template_images'))}">
                         <field name="image_sets"/>
                     </page>
                 </notebook>
