--- a/view/template_form.xml
+++ b/view/template_form.xml
@@ -2,7 +2,12 @@
 <!-- This file is part of Nereid.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
+    <xpath expr="//field[@name='products']" position="replace">
+    </xpath>
     <xpath expr="/form/notebook/page[@id='general']" position="after">
+        <page name="products">
+            <field name="products"/>
+        </page>
         <page string="Description" id="template-description">
             <field name="description"/>
         </page>
