--- a/view/product_form_nereid.xml
+++ b/view/product_form_nereid.xml
@@ -43,11 +43,9 @@ this repository contains the full copyright notices and license terms. -->
                             id="sepr_cross_sells"/>
                         <field name="cross_sells" colspan="4" />
                     </page>
-                    <page string="Images" id="images"
+                    <page string="Static Files" id="static_files"
                         states="{'invisible': Bool(Eval('use_template_images'))}">
-                        <label name="default_image_set"/>
-                        <field name="default_image_set"/>
-                        <field name="image_sets" colspan="4"/>
+                        <field name="static_files" colspan="4"/>
                     </page>
                 </notebook>
             </page>
