--- a/view/product_form_nereid.xml
+++ b/view/product_form_nereid.xml
@@ -16,39 +16,37 @@ this repository contains the full copyright notices and license terms. -->
     <xpath expr="/form/field[@name=&quot;description&quot;]"
         position="replace">
     </xpath>
-    <xpath expr="/form/field[@name=&quot;active&quot;]" position="after">
-        <notebook colspan="6">
-            <page string="Description" id="desc"
-                    states="{'invisible': Bool(Eval('use_template_description'))}">
-                <separator name="description" colspan="4"/>
-                <field name="description" colspan="4"/>
-            </page>
-            <page string="E-Commerce Details"
-                    id="ecomm_det"
-                    states="{'invisible': Not(Bool(Eval('displayed_on_eshop')))}">
-                <label name="uri"/>
-                <field name="uri"/>
-                <label name="use_template_images"/>
-                <field name="use_template_images"/>
-                <notebook colspan="4" >
-                    <page string="Related Products" col="4"
-                        id="related_products" >
-                        <separator colspan="4" string="Up-Sells"
-                            id="sepr_up_sells"/>
-                        <field name="up_sells" colspan="4" />
-                        <newline />
-                        <separator
-                            colspan="4"
-                            string="Cross-Sells"
-                            id="sepr_cross_sells"/>
-                        <field name="cross_sells" colspan="4" />
-                    </page>
-                    <page string="Media" id="product_media"
-                        states="{'invisible': Bool(Eval('use_template_images'))}">
-                        <field name="media" colspan="4"/>
-                    </page>
-                </notebook>
-            </page>
-        </notebook>
+    <xpath expr="/form/notebook" position="inside">
+        <page string="Description" id="desc"
+                states="{'invisible': Bool(Eval('use_template_description'))}">
+            <separator name="description" colspan="4"/>
+            <field name="description" colspan="4"/>
+        </page>
+        <page string="E-Commerce Details"
+                id="ecomm_det"
+                states="{'invisible': Not(Bool(Eval('displayed_on_eshop')))}">
+            <label name="uri"/>
+            <field name="uri"/>
+            <label name="use_template_images"/>
+            <field name="use_template_images"/>
+            <notebook colspan="4" >
+                <page string="Related Products" col="4"
+                    id="related_products" >
+                    <separator colspan="4" string="Up-Sells"
+                        id="sepr_up_sells"/>
+                    <field name="up_sells" colspan="4" />
+                    <newline />
+                    <separator
+                        colspan="4"
+                        string="Cross-Sells"
+                        id="sepr_cross_sells"/>
+                    <field name="cross_sells" colspan="4" />
+                </page>
+                <page string="Media" id="product_media"
+                    states="{'invisible': Bool(Eval('use_template_images'))}">
+                    <field name="media" colspan="4"/>
+                </page>
+            </notebook>
+        </page>
     </xpath>
 </data>
